# dapr-agents-oas-adapter

./: .gitignore  404.html  CLAUDE.md  LICENSE  PRD-dapr-agents-oas-adapter.md  PRD.md  README.md  index.html  mkdocs.yml  objects.inv  prd_creator_assistant.md  pyproject.toml  secrets.json.template  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  publish.yml
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
api/: index.html
api/async_loader/: index.html
api/caching/: index.html
api/exporter/: index.html
api/loader/: index.html
api/logging/: index.html
api/types/: index.html
api/utils/: index.html
api/validation/: index.html
docs/: index.md
docs/api/: async_loader.md  caching.md  exporter.md  index.md  loader.md  logging.md  types.md  utils.md  validation.md
docs/examples/: from-oas.md  to-oas.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: async.md  caching.md  exporting.md  loading.md  logging.md  validation.md
examples/: README.md  __init__.py
examples/_shared/: __init__.py  env_templates.py  llm_workflow_activities.py  optional_dotenv.py  paths.py  sys_path.py
examples/_shared/dapr/components/openai/: openai.yaml
examples/_shared/dapr/components/redis/: messagepubsub.yaml
examples/_shared/dapr/components/secrets/: local-secret-store.yaml
examples/_shared/dapr/components/workflow/: workflowstate.yaml
examples/from-oas/: index.html
examples/from_oas/: README.md
examples/from_oas/04-agent-based-workflows/: README.md  app.py  dapr.yaml
examples/from_oas/04-agent-based-workflows/components/: workflowstate.yaml
examples/from_oas/04-llm-based-workflows/: README.md  app.py  dapr.yaml
examples/from_oas/04-llm-based-workflows/components/: openai.yaml
examples/from_oas/04-message-router-workflow/: README.md  app.py  dapr.client.yaml  dapr.yaml  message_client.py  resolve_resources.py
examples/from_oas/04-message-router-workflow/components/: openai.yaml  pubsub.yaml  statestore.yaml
examples/to-oas/: index.html
examples/to_oas/: README.md
examples/to_oas/04-agent-based-workflows/: README.md  dapr.yaml  export_oas.py  resolve_resources.py  workflow_agents.py
examples/to_oas/04-agent-based-workflows/exported/: DestinationExtractor.yaml  ItineraryAgent.yaml  PlannerAgent.yaml
examples/to_oas/04-llm-based-workflows/: README.md  dapr.yaml  export_oas.py  resolve_resources.py  workflow_single.py
examples/to_oas/04-message-router-workflow/: README.md  app.py  dapr.client.yaml  dapr.yaml  export_oas.py  message_client.py  resolve_resources.py  workflow.py
examples/to_oas/04-message-router-workflow/exported/: blog_workflow.yaml
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/async/: index.html
guide/caching/: index.html
guide/exporting/: index.html
guide/loading/: index.html
guide/logging/: index.html
guide/validation/: index.html
search/: search_index.json
src/dapr_agents_oas_adapter/: __init__.py  async_loader.py  cache.py  exceptions.py  exporter.py  loader.py  logging.py  state.py  types.py  utils.py  validation.py
src/dapr_agents_oas_adapter/converters/: __init__.py  agent.py  base.py  flow.py  llm.py  node.py  tool.py  workflow_helpers.py
tests/: __init__.py  conftest.py  test_async_loader.py  test_cache.py  test_converters.py  test_coverage_gaps.py  test_integration.py  test_loader_exporter.py  test_logging.py  test_package.py  test_property_based.py  test_state.py  test_types.py  test_utils.py  test_validation.py  test_workflow_helpers.py  test_workflow_runtime.py
tests/fixtures/: oas_specs.py
tests/integration/: __init__.py  conftest.py  test_dapr_workflow.py
