[project]
name = "dapr-agents-oas-adapter"
version = "0.1.0"
description = "Adapter library to make Dapr Agents compatible with Open Agent Spec"
readme = "README.md"
authors = [
    { name = "Helton Dória", email = "helton.doria@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyagentspec>=25.4.1",
    "dapr-agents>=0.10.4",
    "dapr>=1.16.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-any-return", "attr-defined", "call-arg", "arg-type", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

