[project]
name = "dapr-agents-oas-adapter"
version = "0.8.0"
description = "Adapter library to make Dapr Agents compatible with Open Agent Spec"
readme = "README.md"
authors = [
    { name = "Helton Dória", email = "helton.doria@gmail.com" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pyagentspec>=25.4.1",
    "dapr-agents>=0.10.5",
    "dapr>=1.16.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "hypothesis>=6.100.0",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-tldr>=0.2.6",
    "radon>=6.0.1",
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "vulture>=2.14",
    "xenon>=0.9",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (imports)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "RUF", # Ruff rules
    "ANN", # flake8-annotations
    "PT",  # flake8-pytest-style
    "ARG", # flake8-unused-arguments
    "T20", # flake8-print
    "RET", # flake8-return
    "SLF", # flake8-self
    "PIE", # flake8-pie
    "PL",  # Pylint (PLC/PLE/PLR/PLW)
    "TCH", # flake8-type-checking
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "ASYNC", # flake8-async
]
ignore = [
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PLR0912",  # too-many-branches (converter methods are inherently branchy)
    "PLR0915",  # too-many-statements
    "PLR0911",  # too-many-return-statements
    "PLC0415",  # import-outside-top-level (lazy imports to avoid circular deps)
    "ANN401",   # any-type (too restrictive for adapter patterns)
    "BLE001",   # blind-except (intentional for adapter error wrapping)
    "PLW0603",  # global-statement (used in injectable logging)
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ANN", "SLF001", "PLR0912", "PLR0915"]
"examples/**/*.py" = ["T201", "ANN", "ARG001", "E402", "S101", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-any-return", "attr-defined", "call-arg", "arg-type", "unused-ignore"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "information"
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
include = ["."]
exclude = ["**/.venv/**", "**/tests/**", "**/examples/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Dapr sidecar (deselected by default)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.codespell]
skip = ".git,.venv,.mypy_cache,.hypothesis,uv.lock,htmlcov,site"
check-filenames = true
check-hidden = true
ignore-words-list = "crate,fo,nd,instale"

[tool.vulture]
paths = ["."]
min_confidence = 90
exclude = [".venv", "tests"]
